--- a/KuranX.App/Core/Pages/NoteF/NoteFrame.xaml
+++ b/KuranX.App/Core/Pages/NoteF/NoteFrame.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:KuranX.App.Core.Pages"
       xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
       mc:Ignorable="d"
-      d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
+      d:DesignHeight="708" d:DesignWidth="1115" d:MinHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
       Title="NoteFrame" Background="#FAFAFA" Loaded="Page_Loaded">
 
     <Grid>
@@ -748,7 +748,7 @@
                 <Border Grid.Column="1" Grid.Row="0"  UseLayoutRounding="True" SnapsToDevicePixels="True">
                     <Border Width="320" Height="60" Style="{DynamicResource defaultBorderShadowEffect}">
                         <StackPanel Orientation="Horizontal">
-                            <Border  Width="15" CornerRadius="5 0 0 5" Background="#E33FA1" />
+                            <Border  Width="15" CornerRadius="5 0 0 5" Background="#B30B00" />
                             <Border Width="230" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 0 10 0">
                                 <StackPanel Orientation="Horizontal">
                                     <StackPanel Orientation="Vertical" Margin="5 0 10 0">
@@ -782,27 +782,6 @@
                             </Border>
                             <Border Width="24" Height="24" Margin="0 0 10 0">
                                 <Button Content="Ayet" Style="{DynamicResource nt_ItemOpenIcon}"  Tag="ArrowRight" Click="filter_Click" />
-                            </Border>
-                        </StackPanel>
-                    </Border>
-                </Border>
-
-                <Border Grid.Column="1" Grid.Row="1" UseLayoutRounding="True" SnapsToDevicePixels="True">
-                    <Border Width="320" Height="60" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal">
-                            <Border Width="15" CornerRadius="5 0 0 5" Background="#B30B00" />
-                            <Border Width="230" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 0 10 0">
-                                <StackPanel Orientation="Horizontal">
-                                    <StackPanel Orientation="Vertical" Margin="5 0 10 0">
-                                        <TextBlock Text="Pdf Notları" FontSize="14" Style="{DynamicResource nt_StackHeader}" />
-                                    </StackPanel>
-                                </StackPanel>
-                            </Border>
-                            <Border Width="36" Height="36" Margin="0 0 7 0">
-                                <Button x:Name="pdfStat"  Style="{DynamicResource nt_viewStackBtn}" Content="0" Tag="#B30B00" Uid="#FFF" />
-                            </Border>
-                            <Border Width="24" Height="24" Margin="0 0 10 0">
-                                <Button Content="PDF" Style="{DynamicResource nt_ItemOpenIcon}"  Tag="ArrowRight" Click="filter_Click" />
                             </Border>
                         </StackPanel>
                     </Border>
@@ -850,7 +829,7 @@
                 </StackPanel>
 
                 <StackPanel Style="{DynamicResource frameItemsOffsetNav}">
-                    <Button x:Name="filterPdf" IsEnabled="False" Tag="#B30B00" Content="PDF" Style="{DynamicResource nt_pageColorControl}" Click="filter_Click" />
+                    <Button x:Name="filterlibrary" IsEnabled="False" Tag="#B30B00" Content="Kütüphane" Style="{DynamicResource nt_pageColorControl}" Click="filter_Click" />
                 </StackPanel>
             </StackPanel>
         </StackPanel>
