--- a/KuranX.App/Core/Pages/SubjectF/SubjectItem.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectItem.xaml
@@ -331,7 +331,7 @@
 
                 <Button x:Name="backButton" Grid.Column="1" Height="30" Content="Geri Dön" Tag="ArrowLeft" Style="{DynamicResource defaultActionButonBstrpRed}" Click="backButton_Click" />
                 <Button x:Name="noteButton" Grid.Column="2" Height="30" Content="Not Al-Oku" Tag="JournalBookmark" Style="{DynamicResource defaultActionButonBstrpPurple}" Click="noteButton_Click" />
-                <Button x:Name="openVerseButton" Grid.Column="3" Height="30" Content="Sureye Git" Tag="ArrowRight"  Style="{DynamicResource defaultActionButonBstrpGreen}" Click="openVerseButton_Click" />
+                <Button x:Name="openVerseButton" Grid.Column="3" Height="30" Content="Ayete Git" Tag="ArrowRight"  Style="{DynamicResource defaultActionButonBstrpGreen}" Click="openVerseButton_Click" />
             </Grid>
         </Border>
 
@@ -393,10 +393,10 @@
                                 <StackPanel Orientation="Horizontal" Grid.Column="0">
                                     <TextBlock Text="Yorumlayan" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
                                     <ComboBox x:Name="interpreterWriterCombo"  Style="{DynamicResource sr_NavCombobox}" SelectedIndex="0" Margin="10,0,0,0" SelectionChanged="interpreterWriterCombo_SelectionChanged">
-                                        <ComboBoxItem  Content="Yorumcu Türkçe" Uid="1" Tag="Yorumcu 1" />
-                                        <ComboBoxItem  Content="Yorumcu Türkçe 2" Uid="2" Tag="Mehmet Okuyan" />
-                                        <ComboBoxItem  Content="Yorumcu İngilizce" Uid="3" Tag="Yorumcu 2" />
-                                        <ComboBoxItem  Content="Yorumcu Almanca" Uid="4" Tag="Yorumcu 3" />
+                                        <ComboBoxItem  Content="Türkçe 1" Uid="1" Tag="Ömer Çelik" />
+                                        <ComboBoxItem  Content="Türkçe 2" Uid="2" Tag="Mehmet Okuyan" />
+                                        <ComboBoxItem  Content="İngilizce" Uid="3" Tag="Yorumcu 2" />
+                                        <ComboBoxItem  Content="Almanca" Uid="4" Tag="Yorumcu 3" />
                                     </ComboBox>
                                 </StackPanel>
 
