--- a/KuranX.App/Core/Pages/VerseF/sureFrame.xaml
+++ b/KuranX.App/Core/Pages/VerseF/sureFrame.xaml
@@ -7,14 +7,14 @@
       xmlns:local="clr-namespace:KuranX.App.Core.Pages"
       xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d"
-      d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
+      d:DesignHeight="708" d:DesignWidth="1115" d:MinHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
       Title="ayetlerFrame" Background="#FAFAFA" Loaded="Page_Loaded">
 
     <Grid>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
-            <RowDefinition Height="523" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="85" />
         </Grid.RowDefinitions>
 
@@ -248,7 +248,7 @@
                 </Grid.RowDefinitions>
 
                 <Border Padding="10" x:Name="srItem1" Grid.Column="0" Grid.Row="0" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}"  Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor1" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -284,7 +284,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem2" Grid.Column="1" Grid.Row="0" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor2" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -320,7 +320,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem3" Grid.Column="2" Grid.Row="0" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor3" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -356,7 +356,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem4" Grid.Column="3" Grid.Row="0" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor4" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -392,7 +392,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem5" Grid.Column="4" Grid.Row="0" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor5" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -428,7 +428,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem6" Grid.Column="0" Grid.Row="1" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor6" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -464,7 +464,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem7" Grid.Column="1" Grid.Row="1" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor7" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -500,7 +500,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem8" Grid.Column="2" Grid.Row="1" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor8" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -536,7 +536,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem9" Grid.Column="3" Grid.Row="1" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor9" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -572,7 +572,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem10" Grid.Column="4" Grid.Row="1" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor10" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -608,7 +608,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem11" Grid.Column="0" Grid.Row="2" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor11" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -644,7 +644,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem12" Grid.Column="1" Grid.Row="2" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor12" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -680,7 +680,7 @@
                 </Border>
 
                 <Border Padding="10"  x:Name="srItem13" Grid.Column="2" Grid.Row="2" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor13" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -716,7 +716,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem14" Grid.Column="3" Grid.Row="2" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor14" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
@@ -752,7 +752,7 @@
                 </Border>
 
                 <Border Padding="10" x:Name="srItem15" Grid.Column="4" Grid.Row="2" Style="{DynamicResource aniEffectFadeBorder}" Visibility="Hidden">
-                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}">
+                    <Border Background="#FFF" Style="{DynamicResource defaultBorderShadowEffect}" Width="203" Height="151">
                         <StackPanel Orientation="Vertical">
                             <Border x:Name="srColor15" Height="12" CornerRadius="5 5 0 0" />
                             <StackPanel Orientation="Horizontal" Height="67" Width="203">
