--- a/KuranX.App/Core/ResourceXaml/popupDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/popupDesing.xaml
@@ -244,6 +244,33 @@
         <Setter Property="Padding" Value="10 0 10 0" />
     </Style>
 
+    <Style x:Key="pp_DefaultBasic" TargetType="Button" BasedOn="{StaticResource pp_DefaultButtonBase}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="borderTarget" CornerRadius="5" BorderBrush="#E1E3E6" BorderThickness="1">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <TextBlock Margin="5 0 0 0" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" Foreground="{TemplateBinding Foreground}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" TextAlignment="Center" VerticalAlignment="Center" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="borderTarget" Property="Background" Value="#F0433A" />
+                            <Setter Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="borderTarget" Property="BorderThickness" Value="0" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="borderTarget" Property="Background" Value="#FFE4E6EF" />
+                            <Setter Property="Cursor" Value="No" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="pp_DefaultButtonBstrp" TargetType="Button" BasedOn="{StaticResource pp_DefaultButtonBase}">
         <Setter Property="Template">
             <Setter.Value>
@@ -338,6 +365,40 @@
                             <Icon:PackIconEvaIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Right" Width="14" Height="14" Margin="10 0 0 0" />
                         </StackPanel>
                     </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+
+                <Setter Property="Background" Value="#F0433A" />
+                <Setter Property="Foreground" Value="#FFF" />
+                <Setter Property="Cursor" Value="Hand" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="pp_BasicConnectItems" TargetType="Button">
+
+        <Setter Property="Background" Value="#fff" />
+        <Setter Property="Foreground" Value="#1C1E2F" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Height" Value="56" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border Margin="10" Style="{DynamicResource defaultBorderShadowEffect}" Background="{TemplateBinding Background}" Width="220">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <TextBlock MaxWidth="200" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}"  FontSize="14" FontFamily="{DynamicResource PoppinsRegular}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" TextAlignment="Center" />
+                            <TextBlock MaxWidth="200" x:Name="counttext" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" Text="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}"  FontSize="14" FontFamily="{DynamicResource PoppinsRegular}" Foreground="#F0433A" HorizontalAlignment="Center" TextAlignment="Center" Margin="5 0 0 0" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Foreground" Value="#FFF" TargetName="counttext" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -820,6 +881,34 @@
                 <ControlTemplate>
                     <Border x:Name="moveWindowBase" CornerRadius="1" Background="#CACDD1" BorderBrush="#7B7D81" BorderThickness="1">
                         <Icon:PackIconIonicons x:Name="moveWindowIco" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Foreground="{TemplateBinding Foreground}" Width="16" Height="16" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#454E5E" TargetName="moveWindowBase" />
+                            <Setter Property="BorderBrush" Value="#454E5E" TargetName="moveWindowBase" />
+                            <Setter Property="Foreground" Value="#FFF" TargetName="moveWindowIco" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="pp_moveWindowIconEye" TargetType="Button">
+
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Margin" Value="2" />
+        <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="Foreground" Value="#7B7D81" />
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="moveWindowBase" CornerRadius="1" Background="#CACDD1" BorderBrush="#7B7D81" BorderThickness="1">
+                        <Icon:PackIconMaterial x:Name="moveWindowIco" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Foreground="{TemplateBinding Foreground}" Width="16" Height="16" VerticalAlignment="Center" HorizontalAlignment="Center" />
                     </Border>
 
                     <ControlTemplate.Triggers>
